2005-08-17  Sushma Rai <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c (build_cache)(update_cache):
	Freezing the cache update, and writing to the disk at the end.
	Fixes the problem of frequent disk access, and high CPU utilization for 
	huge caches.

	* addressbook/e-book-backend-gal.c (generate_cache_handler): Similar.

2005-08-12  Praveen Kumar  <kpraveen@novell.com>

	* calendar/e-cal-backend-exchange.c:
	(open_calendar): Remove the warning dialog as all UI stuff will
	be handled by the plugin. Fix for the bug 273272.
	
2005-08-11  Praveen Kumar  <kpraveen@novell.com>

	* storage/exchange-config-listener.c
	(exchange_camel_urls_is_equal): Added new
	(account_added): Removed the default folder settings as it will be 
	handled by the plugin.
	(account_changed): Removed the dialog popups as all dialogs are now
	from the plugin
	(account_removed): Removed the ESource deletion and the dialog popup
	as it will be handled by the plugin
	
2005-08-16  Arunprakash  <arunp@novell.com>

	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks) :
	Converted the time read from the server to local zone before
	returning. Otherwise it was floating time. Fixes #310449.

2005-08-16  Shakti Sen <shprasad@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_categories)
	(populate_categories): Added support for categories.

	Fixes bug #221030.

2005-08-16  Shakti Sen <shprasad@novell.com>

	* addressbook/e-book-backend-exchange.c:
	Added new functions proppatch_im(), populate_im().
	In brief, contact editor (exchange) supports IM field.

	Fixes bug #257802.

2005-08-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.3.7
	* NEWS : Updated
	Updated the docs as well.

2005-08-05  Arunprakash <arunp@novell.com>

	* camel/camel-exchange-store.c (exchange_get_folder_info) : Reverted
	the changes for constructing the prefix, as the bug was somewhere else
	and got fixed. These changes are wrong and worked for certain cases.