@@ -1,3 +1,8 @@
+2005-08-17  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* addressbook/e-book-backend-exchange.c :
+	* addressbook/e-book-backend-gal.c : Fixed some typos for build break.
+
 2005-08-17  Sushma Rai <rsushma@novell.com>
 
 	* addressbook/e-book-backend-exchange.c (build_cache)(update_cache):
